--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "typeorm:migration:generate": "ts-node -r tsconfig-paths/register ./src/data-source.ts migration:generate src/migrations/$(npm run --silent migration:name)",
+    "typeorm:migration:run": "ts-node -r tsconfig-paths/register ./src/data-source.ts migration:run",
+    "typeorm:migration:revert": "ts-node -r tsconfig-paths/register ./src/data-source.ts migration:revert"
   },
   "dependencies": {
     "@nestjs/axios": "^4.0.0",
