--- a/package.json
+++ b/package.json
@@ -32,10 +32,13 @@
     "@nestjs/typeorm": "^11.0.0",
     "amqp-connection-manager": "^4.1.14",
     "amqplib": "^0.10.8",
+    "class-validator": "^0.14.0",
+    "class-transformer": "^0.5.1",
     "dotenv": "^16.5.0",
     "pg": "^8.16.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
+    "stripe": "^14.17.0",
     "typeorm": "^0.3.24"
   },
   "devDependencies": {
